# ann-benchmarks

./: .gitignore  README.md  faiss-indexflatip-amx.html  faiss-indexflatip.html  glove-100-angular_10_angular.html  index.html  run_conda.sh  run_conda_env.sh  run_test.sh  run_test_socket.sh
ann_benchmarks/: main.py
ann_benchmarks/algorithms/base/: Dockerfile  module.py
ann_benchmarks/algorithms/diskann_rs/: .gitignore  Dockerfile  config.yml  module.py  sync_diskann_rs.sh
ann_benchmarks/algorithms/diskann_rs/native/: Cargo.toml  README.md  pyproject.toml
ann_benchmarks/algorithms/diskann_rs/native/src/: lib.rs
ann_benchmarks/algorithms/faiss/: Dockerfile  config.yml  module.py
ann_benchmarks/algorithms/faiss_amx/: Dockerfile  config.yml  module.py
