[package]
name = "diskann_rs_native"
version = "0.1.0"
edition = "2024"

[lib]
name = "diskann_rs_native"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.22"
pyo3 = { version = "0.22", features = ["extension-module"] }
thiserror = "2"
ndarray = "0.16"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1"
rand = "0.9"
bytemuck = { version = "1", features = ["derive"] }

# DiskANN Rust implementation (vendored under ../third_party/DiskANN-rs).
# The algorithm Dockerfile will clone it if missing.
diskann = { path = "../third_party/DiskANN-rs/diskann" }
diskann-disk = { path = "../third_party/DiskANN-rs/diskann-disk" }
diskann-providers = { path = "../third_party/DiskANN-rs/diskann-providers" }
diskann-vector = { path = "../third_party/DiskANN-rs/diskann-vector" }
diskann-quantization = { path = "../third_party/DiskANN-rs/diskann-quantization", features = ["flatbuffers", "rayon"] }
diskann-utils = { path = "../third_party/DiskANN-rs/diskann-utils" }
rayon = "1.11.0"
